<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MojMikroAndroid</string>
    <string name="insert_name">Vpiši svoje ime</string>
    <string name="ok_text">Shrani</string>
    <string name="cancel_text">Razveljavi</string>
    <string name="hello_text">Pozdravljen/a, %s!</string>
    <string name="my_info">Moji podatki</string>
    <string name="messages">Sporočila</string>
    <string name="map">Zemljevid</string>
    <string name="region">Izberi regijo</string>
    <string name="gender">Določi spol</string>
    <string name="android_experiences">Izkušnje z Androidom</string>
    <string name="believe_in_aliens">Verjameš v nezemljane?</string>
    <string name="gender_male">moški</string>
    <string name="gender_female">ženski</string>
    <string name="quit">Izhod</string>
    <string name="insert_message">Napiši\nsporočilo</string>
    <string name="send_message_text">Pošlji</string>
    <string name="send_text">Pošlji</string>
    <string name="enter_name_first">Najprej vpiši svoje ime.</string>
    <string name="waiting_for_gps">Čakam na GPS lokacijo…</string>
    <string name="message_sent">Sporočilo je poslano.</string>
    <string name="message_not_sent">Sporočilo ni poslano.</string>
    <string name="refresh">Osveži</string>
    <string name="reply">Odgovori</string>
    <string name="show_on_map">Prikaži na zemljevidu</string>
    <string-array name="all_regions">
        <item>Dolenjska</item>
        <item>Gorenjska</item>
        <item>Koroška</item>
        <item>Notranjska</item>
        <item>Prekmurje</item>
        <item>Primorska</item>
        <item>Štajerska</item>
    </string-array>
    <string-array name="all_android_experiences">
        <item>Prvič slišim</item>
        <item>Imam napravo</item>
        <item>Napredni uporabnik</item>
        <item>Razvijalec začetnik</item>
        <item>Napredni razvijalec</item>
    </string-array>
</resources>

